Also point the minimalStreamWindow downward
git-svn-id: file:///home/lennart/svn/public/pavucontrol/trunk@79 c17c95f2-f111-0410-90bf-f30a9569010c

--- a/src/pavucontrol.glade
+++ b/src/pavucontrol.glade
@@ -631,6 +631,7 @@ Monitors</property>
                         <child>
                           <widget class="GtkArrow" id="arrow1">
                             <property name="visible">True</property>
+                            <property name="arrow_type">GTK_ARROW_DOWN</property>
                           </widget>
                         </child>
                       </widget>
