--- a/src/pavucontrol.glade
+++ b/src/pavucontrol.glade
@@ -459,7 +459,7 @@ Monitors</property>
             <child>
               <widget class="GtkLabel" id="label5">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_Configutation</property>
+                <property name="label" translatable="yes">_Configuration</property>
                 <property name="use_underline">True</property>
               </widget>
               <packing>
